# playout-rs

./: Cargo.toml
backend/: Cargo.toml
backend/snowmix/: test.ini
backend/src/: channel.rs  console.rs  lib.rs  main.rs  manager.rs  monitor.rs
backend/src/feeds/: cg.rs  mod.rs  video_test.rs
gui/: Cargo.toml
gui/src/: bus.rs  bus_button.rs  main.rs  monitor.rs  monitor_area.rs  monitor_grid.rs  style.rs
gui/style/: bus_button.css
src/: channel.rs  feed.rs  main.rs  manager.rs  monitor.rs  snowmix_conn.rs  v4l2_feed.rs  video_test_feed.rs
src/feeds/: cg.rs  feed.rs  mod.rs  v4l2.rs  video_test.rs
