[package]
name = "playout-backend"
version = "0.1.0"
authors = ["superlou <lousimons@gmail.com>"]

[dependencies]
gstreamer = "0.7.1"
bytes = "0.4"
regex = "0.2"
uuid = {version = "0.4", features = ["v4"]}
rocket = "0.3.1"
rocket_codegen = "0.3.1"
serde = "1.0.11"
serde_derive = "1.0.11"
serde_json = "1.0.2"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]
